--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     //TensorFlow
     implementation "org.tensorflow:tensorflow-android:1.8.0"
 
+    //GIF animation (hourglass)
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
