--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         maven {
             url 'https://google.bintray.com/tensorflow'
         }
+//        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
@@ -23,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+//        mavenCentral()
     }
 }
 
